[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "Simple globally interned strings."
documentation = "https://docs.rs/symbol"
homepage = "https://github.com/remexre/symbol-rs"
license = "Apache-2.0/MIT"
name = "symbol"
readme = "README.md"
repository = "https://github.com/remexre/symbol-rs"
version = "0.1.7"

[dependencies]
lazy_static = "1.0.0"
spin = { version = "0.4.6", default-features = false }

# Requires the std feature.
gc = { optional = true, version = "0.3.2" }

[features]
default = ["std"]
std = []
